# keyword-spotting

./: CMakeLists.txt  README.md  main.cpp
docs/: technical_study.md
keyword-spotting-cpp-mcu-v5/: CMakeLists.txt  README.txt
keyword-spotting-cpp-mcu-v5/model-parameters/: model_metadata.h  model_variables.h
keyword-spotting-cpp-mcu-v5/tflite-model/: tflite_learn_792318_5_compiled.cpp  tflite_learn_792318_5_compiled.h
test_app/: CMakeLists.txt  CMakeLists_simple.txt  README.md  audio_utils.cpp  audio_utils.h  generate_test_data.py  main.cpp  simple_test.cpp
